<resources>
    <string name="app_name">30 Dias de Oração ao Espirito Santo</string>
    <string name="open">Abrir</string>
    <string name="close">Fechar</string>
    <string name="st_dasar">30 Dias de Oração ao Espirito Santo</string>
    <string name="st_sejarah">1</string>
    <string name="st_pancasila">Arquidiose de Londrina</string>
    <string name="tit_sejarah">Sobre</string>
    <string name="st_sila1">Praróquia São José de Jaguapitã - PR</string>
    <string name="st_sila2">Créditos: Marcos P. F. Araújo</string>
    <string name="st_sila3">6</string>
    <string name="st_sila4">7</string>
    <string name="st_sila5">8</string>
    <string name="Header_Title">30 Dias de Oração ao Espirito Santo</string>
	<string name="Sobre">Sobre</string>
	<string name="Oracao">Oração ao Espírito Santo</string>
    <string name="Bar1">Primeiro Dia</string>
    <string name="Bar2">Segundo Dia</string>
    <string name="Bar3">Terceiro Dia</string>
    <string name="Bar4">Quarto Dia</string>
    <string name="Bar5">Quinto Dias</string>
	<string name="Bar6">Sexto Dia</string>
    <string name="Bar7">Sétimo Dia</string>
    <string name="Bar8">Oitavo Dia</string>
    <string name="Bar9">Nono Dia</string>
    <string name="Bar10">Décimo Dia</string>
	<string name="Bar11">Décimo Primeiro Dia</string>
	<string name="Bar12">Décimo Segundo Dia</string>
    <string name="Bar13">Décimo terceiro Dia</string>
    <string name="Bar14">Décimo quarto Dia</string>
    <string name="Bar15">Décimo Quinto Dia</string>
    <string name="Bar16">Décimo Sexto Dia</string>
	<string name="Bar17">Décimo Sétimo Dia</string>
    <string name="Bar18">Décimo Oitavo Dia</string>
    <string name="Bar19">Décimo Nono Dia</string>
    <string name="Bar20">Vigésimo Dia</string>
    <string name="Bar21">Vigésimo Primeiro Dia</string>
	<string name="Bar22">Vigésimo Segundo Dia</string>
    <string name="Bar23">Vigésimo Terceiro Dia</string>
    <string name="Bar24">Vigésimo Quarto Dia</string>
    <string name="Bar25">Vigésimo Quinto Dia</string>
	<string name="Bar26">Vigésimo Sexto Dia</string>
    <string name="Bar27">Vigésimo Sétimo Dia</string>
	<string name="Bar28">Vigésimo Oitavo Dia</string>
    <string name="Bar29">Vigésimo Nono Dia</string>
    <string name="Bar30">Trigésimo Dia</string>
	<string name="BarExit">Sair do Aplicativo</string>
    <string name="head_Sejarah">10</string>
    <string name="Tab1">Parte 1</string>
    <string name="Tab2">Parte 2</string>
    <string name="Tab3">Parte 3</string>
    <string name="Gambar1">Lembrança da Ordenação Diaconal</string>
    <string name="Gambar2">15</string>
    <string name="Gambar3">16</string>
    <string name="Gambar4">17</string>
    <string name="Gambar5">18</string>
    <string name="Gambar6">19</string>

    <!-- AdMob ad unit IDs , Kode ADMOB-->
    <string name="banner_home_footer">20</string>
</resources>
